# snakemake-executor-plugin-cemm-hpc

./: README.md  pyproject.toml
.github/workflows/: release-please.yml
snakemake_executor_plugin_cemm_hpc/: __init__.py
tests/: tests.py
